[2024/5/30] Added a compass item.
[2024/5/30] The ZCG craftguide now shows recipes with their proper groups, instead of trying to show all possible group permutations. A performance and useability enhancement a long time in coming.
[2024/5/28] Restored env ambiance sounds in Outback and Midfeld. These had been missing ever since the realms' physical locations changed!
[2024/5/28] Update circular saw output inventory size for existing circular saws, when they're used.
[2024/5/28] Fixed a bug in the saw formspec: you couldn't set the stacksize!?
[2024/5/28] New formspec for the circular saw: show more nodes in less formspec space.
[2024/5/27] Improvements to the Outback: more signs, a beacon for the miners' hut, reparable rope, and a message for players trying to get past the realm border.
[2024/5/27] Channelwood has got a new look: more plants and nicer trees.
[2024/5/26] Useability improvements to players' inventory bags: switch buttons, snatch, and chuck.
[2023/12/21] ItsABug down too often. Back to Github! If I were conspiracy-minded, I'd wonder if YesABug was being DOSed by their competitors. It's a dark world!
[2021/1/11] Teleport chance to misjump now incorporates the distance of the jump, compared with the teleport's maximum range.
[2021/1/11] Made rosestones generate with coral-like formations instead of the silly straight lines.
[2021/1/11] Made glowing rosestone more fragile.
[2021/1/10] Made oil extract compressible from certain seeds.
[2021/1/10] Updated mapgen messages to annoyingly blame players now. :)
[2021/1/10] Rosestone teleports now require fuel, but are still more fuel-efficient than other types of teleports.
[2021/1/10] Reduced the average length of rosestone (formerly nyan) spawns. The reason for this change is that, due to huge caverns, nyans were much easier to find than before large caverns were added to Minetest, several years ago. This change should hopefully make the number of nyan rainbows smaller, making them more valuable.