@@ -13,6 +13,7 @@ default.LIGHT_MAX = 15
 dofile(default.modpath .. "/cactus.lua")
 dofile(default.modpath .. "/papyrus.lua")
 dofile(default.modpath .. "/nodes.lua")
+dofile(default.modpath .. "/fences.lua")
 dofile(default.modpath .. "/craftitems.lua")
 dofile(default.modpath .. "/crafting.lua")
 dofile(default.modpath .. "/tvine.lua")
